fix flicker when moving from edit mode to view mode

--- a/packages/editor-common/web/statics/styles/general.scss
+++ b/packages/editor-common/web/statics/styles/general.scss
@@ -136,6 +136,7 @@ button {
   overflow-x: auto;
   overflow-y: hidden;
   margin-left: -20px;
+  margin-right: -20px;
 }
 
 .horizontalScrollbar {
